Fix spacing in sidebar select inputs
[MAILPOET-2463]

--- a/assets/css/src/components/formEditor/components/_custom_field.scss
+++ b/assets/css/src/components/formEditor/components/_custom_field.scss
@@ -6,7 +6,8 @@
 }
 
 .edit-post-visual-editor .mailpoet_custom_date,
-.edit-post-visual-editor .mailpoet_custom_field_add_form {
+.edit-post-visual-editor .mailpoet_custom_field_add_form,
+.mailpoet_form_editor_sidebar {
   select {
     padding: 0 24px 0 8px;
   }
